[workspace]
members = ["src/program"]

[package]
name = "digital-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "sdk" }
anyhow = { version = "1", features = ["backtrace"] }
borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
bitcoin = { git = "https://github.com/Arch-Network/bitcoin-arch-v2" }

[build-dependencies]
risc0-build = "0.21.0"

[dev-dependencies]
#risc0-zkvm = "0.21.0"