[workspace]
members = [
    "digital-marketplace",
]

[package]
name = "digital-marketplace-zkvm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
digital-marketplace = { path = "digital-marketplace" }

sdk = { path = "sdk" }
anyhow = { version = "1", features = ["backtrace"] }
borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
bitcoincore-rpc = "0.19.0"
risc0-zkvm = { version = "0.21.0" }
bitcoin = { version = "0.32.2", features = ["serde", "rand"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

hex = "0.4.3"

[build-dependencies]
risc0-build = "0.21.0"

[package.metadata.risc0]
methods = ["digital-marketplace"]