[package]
name = "digital-marketplace-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../sdk" }
anyhow = { version = "1", features = ["backtrace"] }
borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
bitcoin = { git = "https://github.com/Arch-Network/bitcoin-arch-v2" }
risc0-zkvm = { version = "0.21.0" }

[lib]
crate-type = ["cdylib"]